--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ body {
     margin-top: -2px;
     margin-left: -10px;
     background-position: center;
-    background-image: url("/images/Capture1.PNG");
+    background-image: url("/images/Capture1.png");
 
 }
 
